2008-05-25  Werner Koch  <wk@g10code.com>

	Released 1.0.5.

2008-05-23  Werner Koch  <wk@g10code.com>

	* configure.ac: Use -fPIC with GCC under Linux.

2007-12-12  Werner Koch  <wk@g10code.com>

	Released 1.0.4.

	* config.sub, config.guess: Update to version 2007-11-19.

2007-08-24  Werner Koch  <wk@g10code.com>

	Released 1.0.3.
	
	Switched license of the library code back to LGPLv2.1.  See NEWS.

	* COPYING.LIB: Replaced by LPGLv2.1

2007-07-05  Werner Koch  <wk@g10code.com>

	Released 1.0.2.
	
	Relicensed to LGPLv3.

	* COPYING: Replaced by GPLv3.
	* COPYING.LESSER: Removed.
	* COPYING.LIB: New.

	* Makefile.am (ACLOCAL_AMFLAGS): Do not create gzipped tarball.

2007-07-03  Werner Koch  <wk@g10code.com>

	* configure.ac (NETLIBS): Use ws2_32 instead of wsock32.

2007-06-15  Werner Koch  <wk@g10code.com>

	* autogen.sh: Use = and not == in test to be POSIXly correct.
	Change shell back to /bin/sh.

2007-06-15  Marcus Brinkmann  <marcus@g10code.de>

	* autogen.sh: Require bash.

2007-05-30  Werner Koch  <wk@g10code.com>

	* autogen.sh <--build-w32>: Modernize. 

2007-05-29  Werner Koch  <wk@g10code.com>

	* configure.ac: Require automake 1.10 and autoconf 2.61.
	(AM_PROG_CC_C_O): New.  Error out if no C-89 cc is installed.
	(gl_HEADER_SYS_SOCKET): Explicitly add this for documentation. 

2007-05-24  Werner Koch  <wk@g10code.com>

	* configure.ac: Use -Wpointer-arith is possible.

2006-11-22  Werner Koch  <wk@g10code.com>

	Released 1.0.1.

2006-11-21  Werner Koch  <wk@g10code.com>

	* configure.ac (AH_BOTTOM): Define PTH_SYSCALL_SOFT to 0.
	(AC_INIT): Use the SVN magic.

	* m4/gnupg-pth.m4 (GNUPG_PTH_VERSION_CHECK): Use --all with
	pth-config.

2006-11-15  Werner Koch  <wk@g10code.com>

	* autogen.sh: Add convenience option --build-amd64.

2006-10-31  Werner Koch  <wk@g10code.com>

	Released 1.0.0.

2006-10-20  Werner Koch  <wk@g10code.com>

	* Makefile.am (stowinstall): New convenience target.

2006-10-10  Werner Koch  <wk@g10code.com>

	Released 0.9.3.
