@@ -1,3 +1,15 @@
+2008-11-03  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan-handler.c (std_handler_help): Make I unsigned to silence
+	gcc -W warning.
+	* assuan-logging.c (_assuan_log_print_buffer): Likewise for N.
+	* funopen.c (_assuan_funopen): Remove initializer to silence gcc
+	-W warning.
+	* assuan-handler.c (std_cmd_table): Add missing initializer to
+	silence gcc -W warning.
+	* assuan-socket-server.c (io): Likewise.
+	* assuan-socket-connect.c (assuan_socket_connect_ext): Likewise.
+
 2008-10-29  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan.h (assuan_error_t) (_ASSUAN_ONLY_GPG_ERRORS): Make
