@@ -1,3 +1,8 @@
+2008-11-03  Marcus Brinkmann  <marcus@g10code.de>
+
+	* tests/fdpassing.c (register_commands): Add missing initializer
+	to silence gcc -W warning.
+
 2008-05-25  Werner Koch  <wk@g10code.com>
 
 	Released 1.0.5.
